--- a/.github/workflows/simple-pipe.yml
+++ b/.github/workflows/simple-pipe.yml
@@ -29,6 +29,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: greetings-jar
+        path: build/libs
         
   test-run:
 
@@ -43,4 +44,6 @@ jobs:
       - shell: bash
         run: | 
           java -jar greetings-actions.jar ${{ github.event.inputs.myValues }} 
+          
+          
   
